# python-project-lvl1

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  hexlet_code-0.1.12-py2.py3-none-any.whl  pyproject.toml  setup.cfg  sing parameter(s) in Docstring
brain_games/: README.md  brain_calc_question.py  brain_gcd_goal.py  calc_game.py  cli.py  even_check.py  even_game.py  gcd_calc.py  gcd_game.py  general_module.py  greet_first.py  prime_check.py  prime_game.py  prime_goal.py  progression_calc.py  progression_game.py  progression_goal.py  progression_show.py  question_gcd.py  question_prime.py  question_progression.py
brain_games/scripts/: __init__.py  brain-even.py  brain-games.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
