[tool.poetry]
name = "hexlet-code"
version = "0.1.14"
description = ""
authors = ["hikarikumo"]

packages = [
  { include = "brain_games"  },
]

[tool.poetry.scripts]
brain-games       = "brain_games.scripts.brain_games:main"
brain-even        = "brain_games.scripts.brain_even:main"
brain-calc        = "brain_games.scripts.brain_calc:main"
brain-gcd         = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime       = "brain_games.scripts.brain_prime:main"

[tool.poetry.dependencies]
prompt = "^0.4.1"
python = "^3.7"

[tool.poetry.dev-dependencies]
prompt = "^0.4.1"
wemake-python-styleguide = "^0.14.0"
flake8 = "^3.7.9"
autopep8 = "^1.5.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry>=0.12", "poetry-core>=1.0.0", "setuptools>=57.5.0", "wheel>=0.36.2"]

